# Matter-SensAir

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c6_thread  sdkconfig.defaults.esp32c6_wifi  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32h2_thread  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3_wifi
components/button/: CMakeLists.txt  button.cpp  button.h
components/led/: CMakeLists.txt  led.cpp  led.h
components/sensor/: CMakeLists.txt  sensor.cpp  sensor.h
main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml
main/chip/: device_config.h
main/components/: button.cpp  button.h  led.cpp  led.h  led_strip.cpp  led_strip.h  sensor.h
main/include/: CHIPDeviceConfig.h
